# final-project-Zoober97

./: .gitignore  .gitmodules  README.md  design.md
PPN_ESP32_StacjaPogodowa_Marchewka_181257/: CMakeLists.txt
PPN_ESP32_StacjaPogodowa_Marchewka_181257/app/: cli.c  fsm.c  web_server.c  wifi_ap.c
PPN_ESP32_StacjaPogodowa_Marchewka_181257/drivers/: ds18b20.c
PPN_ESP32_StacjaPogodowa_Marchewka_181257/include/: cli.h  ds18b20.h  fsm.h  web_server.h  wifi_ap.h
PPN_ESP32_StacjaPogodowa_Marchewka_181257/main/: CMakeLists.txt  PPN_ESP32_StacjaPogodowa_Marchewka_181257.c
tests/: test_cli.py  tests.md
